# rust-webgl-samples

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.fleet/: run.json
src/: lib.rs  main.rs  render_loop.rs
src/gl/: camera.rs  error.rs  mesh.rs  mod.rs
src/gl/buffers/: binded_obj_ctx.rs  error.rs  mod.rs  object.rs  object_error.rs
src/gl/core/: instance.rs  mod.rs  utils.rs
src/gl/shader/: error.rs  locations.rs  mod.rs  program.rs  shader_type.rs  shader_use_ctx.rs  uniform_value.rs
src/math/: compute_normals.rs  mod.rs
src/samples/: cubes.rs  mod.rs  sample.rs  simple_cube.rs
src/samples/resources/: cube_mesh.rs  mod.rs  simple_shaders.rs
src/utils/: logging.rs  macroses.rs  mod.rs  web.rs
static/: index.html  main.css
www/: package.json  webpack.config.js
www/js/: index.js
www/static/: index.html
