[package]
name = "webgl-app"
version = "0.1.0"
authors = ["Eugene Kravchenko <zzzheka97@gmail.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.63"
wavefront_obj = "10.0.0"
once_cell = "1.17.1"
console_error_panic_hook = "0.1.6"
log = "0.4.17"
thiserror = "1.0.40"
na = { version = "0.31.2", package = "nalgebra" }
glm = { version = "0.17.0", package = "nalgebra-glm" }
na-sparse = { version = "0.8.0", package = "nalgebra-sparse" }
wee_alloc = { version = "0.4.5", optional = true }
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew_integration"] }
yew-hooks = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'CssStyleDeclaration',
    'HtmlStyleElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlUniformLocation',
    'WebGlProgram',
    'WebGlShader',
    'MouseEvent',
    'Window',
]

[profile.release]
opt-level = "s"
lto = true
